--- a/personal_website/static/css/templatemo-style.css
+++ b/personal_website/static/css/templatemo-style.css
@@ -11,7 +11,6 @@ html {
 }
 
 body {
-    color: #8f8f8f;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
